# janeye

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .windsurfrules  CLAUDE.md  Makefile  README.md
back/: alembic.ini  celerybeat-schedule-shm  celerybeat-schedule-wal  main.py  pyproject.toml
back/app/: pre_start.py
back/app/admin/auth/: auth.py
back/app/alembic/: env.py
back/app/api/: __init__.py
back/app/api/internal/: __init__.py  main.py
back/app/api/internal/routes/v1/: routes.py  test_routes.py
back/app/api/internal/routes/v1/auth/: __init__.py  auth_routes.py  login_routes.py
back/app/api/internal/routes/v1/issues/: __init__.py  issue_routes.py  location_routes.py  vote_routes.py
back/app/api/internal/utils/: exceptions.py  json_encoder.py  permissions.py
back/app/core/caching/: redis.py
back/app/core/celery/: __init__.py  celery.py
back/app/core/db/: __init__.py  create_async_engine.py  create_engine.py  get_async_session.py  run_with_new_session.py  sqlite_engine.py
back/app/core/monitoring/: __init__.py  logging.py  sentry.py
back/app/core/openapi/: openapi.py
back/app/dependancies/: common.py
back/app/models/: __init__.py  base.py
back/app/models/auth/: __init__.py  otp.py  session.py  user.py
back/app/models/issues/: __init__.py  issue.py  location.py  vote.py
back/app/models/mixins/: __init_.py  uuid_timestamp.py
back/app/schemas/: __init__.py
back/app/schemas/auth/: __init__.py  auth_schemas.py  forget_password_schemas.py  otp_schemas.py  session_schemas.py  token_schemas.py  user_schemas.py
back/app/schemas/common/: __init__.py  response_schemas.py
back/app/schemas/issues/: __init__.py  issue_schemas.py  location_schemas.py  vote_schemas.py
back/app/services/auth/: __init__.py  logout_services.py  otp_services.py  register_services.py  session_services.py  token_services.py  user_services.py
back/app/services/storage/: __init__.py  s3_service.py
back/app/settings/: __init__.py  common.py  dev.py  production.py
back/app/tasks/: __init__.py  celery_app.py
back/app/utils/: cache_utils.py  celery_utils.py  dead_letter_queue.py  email_utils.py  hash_ids.py  html_template_utils.py  model_utils.py  otp_utils.py  partition_manager.py  password_utils.py  token_utils.py  versioning_cache_utils.py
back/app/utils/validators/: file_validator.py  phone_validator.py  uuid_validator.py
back/scripts/: create_tables.py  entrypoint-celery.sh  ipython.sh  pre-start.sh
deploy/dev/: .env.example  docker-compose.yml
deploy/prod/: docker-compose.yml
deploy/staging/: docker-compose.yml
web/: .dockerignore  .env.example  .env.local  .eslintrc.json  .prettierignore  .prettierrc  CLAUDE.md  README.md  eslint.config.mjs  instrumentation-client.ts  instrumentation.edge.ts  instrumentation.node.ts  instrumentation.ts  middleware.ts  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
web/docker/dev/: Dockerfile
web/docker/staging/: Dockerfile.dev
